--- a/header.html
+++ b/header.html
@@ -15,8 +15,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="images/ggg.png" type="image/x-icon">
-    <link rel="icon" href="images/ggg.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo/ggg.png" type="image/x-icon">
+    <link rel="icon" href="images/logo/ggg.png" type="image/x-icon">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
                 <div class="outer-container clearfix">
                     <!--Logo Box-->
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="images/tlogo.jpg" alt=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/logo/technologo.jpg" alt=""></a></div>
                     </div>
 
                     <!--Nav Outer-->
