--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@ h1 {
                             data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3=""
                             data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                             data-rotate="0" data-saveperformance="off" data-slotamount="default"
-                            data-thumb="images/main-slider/image-1.jpg" data-title="Slide Title"
+                            data-thumb="images/main-slider/slider1.jpg" data-title="Slide Title"
                             data-transition="parallaxvertical">
 
                             <img alt="Discover top-notch Digital Marketing, Software Development, and Website Development services at TECHNOARTZ"
                                 class="rev-slidebg" data-bgfit="cover" data-bgparallax="10"
                                 data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina=""
-                                src="images/main-slider/image-1.jpg">
+                                src="images/main-slider/slider1.jpg">
 
                             <div class="tp-caption" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
                                 data-paddingright="[0,0,0,0]" data-paddingtop="[0,0,0,0]" data-responsive_offset="on"
@@ -150,7 +150,7 @@ h1 {
                                 data-voffset="['20','15','15','15']" data-x="['right','right','right','right']"
                                 data-y="['middle','middle','middle','middle']"
                                 data-frames='[{"from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1000,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-                                <figure class="content-image"><img src="images/main-slider/Web Development.jpg"
+                                <figure class="content-image"><img src="images/main-slider/softwaredevelopment_slider.jpg"
                                         alt="Custom Web Development Services by TECHNOARTZ" height="328" width="581px">
                                 </figure>
 
@@ -165,12 +165,12 @@ h1 {
                             data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3=""
                             data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                             data-rotate="0" data-saveperformance="off" data-slotamount="default"
-                            data-thumb="images/main-slider/image-2.jpg" data-title="Slide Title"
+                            data-thumb="images/main-slider/slider2.jpg" data-title="Slide Title"
                             data-transition="parallaxvertical">
                             <img alt="Build your world-class brand with expert web development, graphics designing and digital marketing services at TECHNOARTZ"
                                 class="rev-slidebg" data-bgfit="cover" data-bgparallax="10"
                                 data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina=""
-                                src="images/main-slider/image-2.jpg">
+                                src="images/main-slider/slider2.jpg">
 
                             <div class="tp-caption" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
                                 data-paddingright="[0,0,0,0]" data-paddingtop="[0,0,0,0]" data-responsive_offset="on"
@@ -218,7 +218,7 @@ h1 {
                                 data-voffset="['20','0','0','0']" data-x="['left','left','left','left']"
                                 data-y="['middle','middle','middle','middle']"
                                 data-frames='[{"from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1000,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-                                <figure class="content-image"><img src="images/main-slider/digitalmarketing.jpeg"
+                                <figure class="content-image"><img src="images/main-slider/digitalmarketing_slider.jpg"
                                         alt="Advanced Digital Marketing Services by TECHNOARTZ" height="328"
                                         width="581px"></figure>
 
@@ -233,13 +233,13 @@ h1 {
                             data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3=""
                             data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                             data-rotate="0" data-saveperformance="off" data-slotamount="default"
-                            data-thumb="images/main-slider/image-3.jpg" data-title="Slide Title"
+                            data-thumb="images/main-slider/slider3.jpg" data-title="Slide Title"
                             data-transition="parallaxvertical">
 
                             <img alt="Best way to showcase your business with professional graphic design services at TECHNOARTZ"
                                 class="rev-slidebg" data-bgfit="cover" data-bgparallax="10"
                                 data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina=""
-                                src="images/main-slider/image-3.jpg">
+                                src="images/main-slider/slider3.jpg">
 
                             <div class="tp-caption" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
                                 data-paddingright="[0,0,0,0]" data-paddingtop="[0,0,0,0]" data-responsive_offset="on"
@@ -286,7 +286,7 @@ h1 {
                                 data-voffset="['20','15','15','15']" data-x="['right','right','right','right']"
                                 data-y="['middle','middle','middle','middle']"
                                 data-frames='[{"from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1000,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-                                <figure class="content-image"><img src="images/main-slider/graphicdesigner.jpeg"
+                                <figure class="content-image"><img src="images/main-slider/graphicdesign_slider.jpg"
                                         alt="Professional Graphics Design Services by TECHNOARTZ" height="328"
                                         width="581px"></figure>
                             </div>
@@ -398,7 +398,7 @@ h1 {
                     </div>
                     <!--Image Column-->
                     <div class="content-column col-md-6 col-sm-12 col-xs-12">
-                        <img src="images/main-slider/tecnoatrz.jpg"
+                        <img src="images/main-slider/ourvission.jpg"
                             alt="Technoartz IT Solutions - Delivering Quality Business and Smart IT Solutions">
                     </div>
                 </div>
@@ -609,7 +609,7 @@ h1 {
                                         <div class="partner-block">
                                             <div class="inner-box">
                                                 <div class="client-img">
-                                                    <img src="images/shareMarketLogo.png"
+                                                    <img src="images/logo/sharemarketkrantilogo.png"
                                                         alt="Share Market Kranti - Promoting Financial Literacy in India" />
                                                 </div>
                                                 <div class="text">Share Market Kranti is committed to providing
@@ -645,7 +645,7 @@ h1 {
                                         <div class="partner-block">
                                             <div class="inner-box">
                                                 <div class="client-img">
-                                                    <img src="images/p_logo2.jpg"
+                                                    <img src="images/logo/shivneritravelslogo.png"
                                                         alt="Shivneri Travels - Premier Car Rental Service in Pune" />
                                                 </div>
                                                 <div class="text">Shivneri Travels provides top car rental service in
@@ -660,7 +660,7 @@ h1 {
                                         <div class="partner-block">
                                             <div class="inner-box">
                                                 <div class="client-img">
-                                                    <img src="images/p_logo8.jpeg"
+                                                    <img src="images/logo/esparktechlogo.png"
                                                         alt="Espark Tech - Innovative Product Architecture from Pune" />
                                                 </div>
                                                 <div class="text">We are a passionate Product Architecture from Pune.
@@ -681,7 +681,7 @@ h1 {
                                         <div class="partner-block">
                                             <div class="inner-box">
                                                 <div class="client-img">
-                                                    <img src="images/i2ilogo1.jpg"
+                                                    <img src="images/logo/i2ilogo.png"
                                                         alt="I2I Specialist - Expert Product Architecture from Pune" />
                                                 </div>
                                                 <div class="text">We are a passionate Product Architecture from Pune.
@@ -696,7 +696,7 @@ h1 {
                                         <div class="partner-block">
                                             <div class="inner-box">
                                                 <div class="client-img">
-                                                    <img src="images/nvlogo.jpg"
+                                                    <img src="images/logo/naturevalleylogo.png"
                                                         alt="SSS7 - Leading Sports Technology Company" />
                                                 </div>
                                                 <div class="text">SS7 Sports is a sports technology company with brands
