--- a/uidevelopment.html
+++ b/uidevelopment.html
@@ -488,129 +488,7 @@
 
 
         <!--Main Footer-->
-        <footer class="main-footer">
-            <div class="auto-container">
-
-                <!--Widgets Section-->
-                <div class="widgets-section">
-                    <div class="row clearfix">
-
-                        <!--Column-->
-                        <div class="column col-md-4 col-sm-6 col-xs-12">
-                            <div class="footer-widget links-widget">
-                                <div class="footer-title">
-                                    <h2>Usefull Links</h2>
-                                </div>
-                                <div class="widget-content">
-                                    <div class="row clearfix">
-                                        <div class="widget-column col-md-6 col-sm-6 col-xs-12">
-                                            <ul class="footer-list">
-                                                <li><a href="about.html">About Us</a></li>
-                                                <li><a href="software_development.html">Our Services</a></li>
-                                                <li><a href="about.html">Why Choose Us</a></li>
-                                                <li><a href="internship.html">Industrial Internship</a></li>
-                                                <li><a href="job_opportunity.html">Job Opportunities</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="widget-column col-md-6 col-sm-6 col-xs-12">
-                                            <ul class="footer-list">
-                                                <!-- <li><a href="software_development.html">Software Development</a></li> -->
-                                                <li><a href="digital_marketing.html">Digital Marketing</a></li>
-                                                <li><a href="full-stack_development.html">Web Development</a></li>
-                                                <li><a href="mobile-application.html">App Development</a></li>
-                                                <li><a href="graphics_designing.html">Graphic Designing</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!--Column-->
-                        <div class="column col-md-4 col-sm-6 col-xs-12">
-                            <div class="footer-widget subscribe-widget">
-                                <div class="footer-title">
-                                    <h2>Subscribe Us</h2>
-                                </div>
-                                <div class="widget-content">
-                                    <div class="text">Subscribe us for recieve latest Updates <br> News and Offers.
-                                    </div>
-                                    <div class="subscribe-form">
-                                        <form method="post" action="#">
-                                            <div class="form-group">
-                                                <input type="email" name="email" value="" placeholder="Email Address..."
-                                                    required="">
-                                                <button type="submit" class="theme-btn"><span
-                                                        class="flaticon-right-arrow-1"></span></button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <ul class="social-icon-one">
-                                        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"
-                                                    aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.instagram.com/accounts/login/"><i
-                                                    class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/in/technoartz"><i class="fa fa-linkedin"
-                                                    aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.twitter.com/"><i class="fa fa-twitter"
-                                                    aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.skype.com/sandipkgadekar_1"><i class="fa fa-skype"
-                                                    aria-hidden="true"></i></a></li>
-                                        <li><a href="https://www.youtube.com/channel/UCnQw85dOqA0oYzAhVzdg4sg"><i
-                                                    class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!--Column-->
-                        <div class="column col-md-4 col-sm-6 col-xs-12">
-                            <div class="footer-widget office-widget">
-                                <div class="footer-title">
-                                    <h2>Corporate Office</h2>
-                                </div>
-                                <div class="widget-content">
-                                    <div class="single-item-carousel owl-carousel owl-theme">
-
-                                        <div class="office-info">
-                                            <ul>
-                                                <li><strong>Development Wing:</strong></li>
-                                                <li>A/11A, 6th Floor, City-Vista, Fountain Road, Kharadi Pune 411014
-                                                </li>
-                                                <li><strong>Find Us On Map</strong></li><br>
-                                                <iframe
-                                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.282409300322!2d73.94253581393393!3d18.561302472773875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3dbcbd5f12f%3A0xcd7dd569ee6edd06!2sNMIMS%20KHARADI!5e0!3m2!1sen!2sin!4v1626102513034!5m2!1sen!2sin"
-                                                    width="300" height="200" style="border: 0;" allowfullscreen=""
-                                                    loading="lazy"></iframe>
-                                            </ul>
-                                        </div>
-
-                                        <!-- <div class="office-info">
-                                            <ul>
-                                                <li><strong>Register Office:</strong></li>
-                                                <li>B/461, Adinath Nagar, Shirur pune 412210 </li>
-                                                <li><strong>Find Us On Map</strong></li><br>
-                                                <iframe
-                                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3776.350148929826!2d74.37576801411974!3d18.827092664643224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc32d2ccf1c994d%3A0xfe5fb804ca254ad7!2sTechnoArtz!5e0!3m2!1sen!2sin!4v1626103075452!5m2!1sen!2sin"
-                                                    width="300" height="200" style="border:0;" allowfullscreen=""
-                                                    loading="lazy"></iframe>
-                                            </ul>
-                                        </div> -->
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-            <!--Copyright-->
-            <div class="copyright">Copyright &copy; 2020-2021. <a href="index.html">Technoartz IT Solution.</a> All
-                rights reserved.</div>
-        </footer>
+        <div include-html="footer.html" id="footer"></div>
         <!--Main Footer-->
 
     </div>
