--- a/internship.html
+++ b/internship.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" href="images/ggg.png" type="image/x-icon">
     <link rel="icon" href="images/ggg.png" type="image/x-icon">
-    <!-- <link href="css/internship.css" rel="internship_style_page"> -->
+    <link href="css/internship.css" rel="internship_style_page">
 
     <!-- SEO Meta Tags -->
     <meta name="description"
