--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 </head>
 
 <body>
+
+    <!--Start pagewrapper-->
     <div class="page-wrapper">
 
         <!-- Main Header-->
@@ -286,6 +288,8 @@
         </section>
         <!--End Main Slider-->
 
+        <br><br>
+
         <!--About us section-->
         <section class="we-are-section">
             <div class="auto-container">
@@ -424,127 +428,79 @@
         </section>
         <!--End Services Section-->
 
-        <!-- Marketing Section -->
+        <!-- Why Choose Technoartz Section -->
         <section class="marketing-section">
             <div class="auto-container">
                 <div class="row clearfix">
 
+                    <!-- Image Column -->
                     <div class="image-column col-md-6 col-sm-12 col-xs-12">
                         <div class="image">
                             <img src="images/resource/BestDigitalMarketing.jpg" alt="Digital Marketing" />
                         </div>
                     </div>
 
+                    <!-- Content Column -->
                     <div class="content-column col-md-6 col-sm-12 col-xs-12">
                         <div class="inner-column">
-                            <h2>Digital Marketing Agency In Pune </h2>
+                            <div class="text-center middle-heading">
+                                <h2>Why Technoartz is the Right Choice for Your Business Growth</h2>
+                            </div>
+
                             <div class="single-item-carousel owl-carousel owl-theme">
 
+                                <!-- Slide 1 -->
                                 <div class="market-content">
                                     <div class="content-inner">
-                                        <div class="content-number">1.</div>
-                                        <h3>Proactive, Effective Marketing Solutions</h3>
-                                        <div class="text">We build real brands through Social Media. Discover how most
-                                            big brands dominate the social market and win more customers daily.</div>
+                                        <!-- Point 1 -->
+                                        <h3>Comprehensive Expertise Across Domains</h3>
+                                        Software Development: Technoartz delivers robust software solutions tailored to
+                                        business needs, from custom web applications to mobile apps. With a focus on
+                                        scalability, security, and performance, the team ensures the software aligns
+                                        perfectly with your long-term business goals.
 
-                                        <div class="featured-block-three">
-                                            <div class="featured-inner">
-                                                <div class="icon-box">
-                                                    <span class="icon"><img src="images/icons/featured-icon-10.png"
-                                                            alt="" /></span>
-                                                </div>
-                                                <h4>Connect with your Audience</h4>
-                                                <div class="featured-text">Social media is a great way to connect with
-                                                    your audience and will allow for more interaction and more
-                                                    followers.</div>
-                                            </div>
-                                        </div>
 
-                                        <div class="featured-block-three">
-                                            <div class="featured-inner">
-                                                <div class="icon-box">
-                                                    <span class="icon"><img src="images/icons/featured-icon-11.png"
-                                                            alt="" /></span>
-                                                </div>
-                                                <h4>Build Loyalty with customers</h4>
-                                                <div class="featured-text">Customer love social media and keeping them
-                                                    happy you will enhance your brand and presence online.</div>
-                                            </div>
-                                        </div>
+                                        <!-- Point 2 -->
+                                        <h3>Focus on Innovation and AI Integration</h3>
 
+                                        Technoartz is known for leveraging cutting-edge technologies, including
+                                        artificial intelligence, in their projects. Whether it’s incorporating AI-driven
+                                        insights in digital marketing campaigns or integrating machine learning
+                                        algorithms in software solutions, Technoartz ensures their clients stay ahead of
+                                        the competition by adopting the latest innovations.
                                     </div>
                                 </div>
 
+                                <!-- Slide 2 -->
                                 <div class="market-content">
                                     <div class="content-inner">
-                                        <div class="content-number">2.</div>
-                                        <h3>SEARCH ENGINE OPTIMIZATION (SEO)</h3>
-                                        <div class="text">Search engine optimization is the process of improving your
-                                            website in a way that increases your website’s visibility in organic search
-                                            results and drives more traffic to your site.</div>
+                                        <!-- Point 3 -->
+                                        <h3>Proven SEO and Marketing Expertise</h3>
 
-                                        <div class="featured-block-three">
-                                            <div class="featured-inner">
-                                                <div class="icon-box">
-                                                    <span class="icon"><img src="images/icons/featured-icon-10.png"
-                                                            alt="" /></span>
-                                                </div>
-                                                <h4>Technical SEO</h4>
-                                                <div class="featured-text">Increased targeted traffic, improves Search
-                                                    Engine Ranking, Higher quality score, Brand visibility, Long term
-                                                    positioning, Cost-effective.</div>
-                                            </div>
-                                        </div>
+                                        When it comes to digital marketing, Technoartz’s team is skilled in boosting
+                                        search engine rankings, driving organic traffic, and enhancing online
+                                        visibility. Their strategies are data-driven and align with the latest algorithm
+                                        changes, ensuring consistent growth and a strong online presence for clients
+                                        across various industries.
 
-                                        <div class="featured-block-three">
-                                            <div class="featured-inner">
-                                                <div class="icon-box">
-                                                    <span class="icon"><img src="images/icons/featured-icon-11.png"
-                                                            alt="" /></span>
-                                                </div>
-                                                <h4>Keyword & Market Research</h4>
-                                                <div class="featured-text">Keyword research, keyword analysis, Long-tail
-                                                    keywords significantly increase the traffic volume to your website.
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <!-- Point 4 -->
+                                        <h3>Post-Launch Support and Maintenance</h3>
 
+                                        Technoartz provides ongoing support even after project delivery. Their dedicated
+                                        support team ensures that any issues are resolved promptly, and continuous
+                                        updates are provided to keep the systems and marketing strategies in top shape.
                                     </div>
                                 </div>
 
+                                <!-- Slide 3 -->
                                 <div class="market-content">
                                     <div class="content-inner">
-                                        <div class="content-number">3.</div>
-                                        <h3>Lead Generation Company in Pune</h3>
-                                        <div class="text">Technoartz works with only one mission: 100% client
-                                            satisfaction. We provide specialized lead generation services in Pune.</div>
+                                        <!-- Point 5 -->
+                                        <h3>End-to-End Solutions</h3>
 
-                                        <div class="featured-block-three">
-                                            <div class="featured-inner">
-                                                <div class="icon-box">
-                                                    <span class="icon"><img src="images/icons/featured-icon-10.png"
-                                                            alt="" /></span>
-                                                </div>
-                                                <h4>Marketing Qualified Leads</h4>
-                                                <div class="featured-text">Our expertise first understands your business
-                                                    and goals to determine the right method of generating
-                                                    marketing-ready leads.</div>
-                                            </div>
-                                        </div>
-
-                                        <div class="featured-block-three">
-                                            <div class="featured-inner">
-                                                <div class="icon-box">
-                                                    <span class="icon"><img src="images/icons/featured-icon-11.png"
-                                                            alt="" /></span>
-                                                </div>
-                                                <h4>Sales Qualified Leads</h4>
-                                                <div class="featured-text">Our experts work with you via project-based
-                                                    workshops and provide end-to-end lead generation services to achieve
-                                                    your specific needs.</div>
-                                            </div>
-                                        </div>
-
+                                        Technoartz provides an integrated suite of services, so clients don’t need to
+                                        juggle multiple vendors. From ideation and software development to marketing and
+                                        branding, Technoartz takes care of everything under one roof.
                                     </div>
                                 </div>
 
@@ -555,17 +511,20 @@
                 </div>
             </div>
         </section>
-        <!-- End Marketing Section -->
-<br><br>
+        <!-- Why Choose Technoartz Section -->
+
+
+
+
+        <br><br>
         <!--Our Trusted Customers Start-->
         <section>
             <div class="sec-title centered">
                 <h2>Words From Our Trusted Customers</h2>
             </div>
-            
+
             <div class="sd_master_wrapper">
-                <div class="sdtestBg2"></div>
-                <div class="sdtestBg3"></div>
+
                 <div class="slideshow">
 
                     <div class="content"> <!-- slide 1 -->
