--- a/internship.html
+++ b/internship.html
@@ -9,12 +9,12 @@
 
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
     <link href="css/responsive.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="images/ggg.png" type="image/x-icon">
     <link rel="icon" href="images/ggg.png" type="image/x-icon">
-    <link href="css/internship.css" rel="internship_style_page">
+    <!-- <link href="css/internship.css" rel="internship_style_page"> -->
 
     <!-- SEO Meta Tags -->
     <meta name="description"
