--- a/uidevelopment.html
+++ b/uidevelopment.html
@@ -161,7 +161,7 @@
                                                 </div>
                                             </div>
                                             <div class="text">
-                                                Throughout my UI development internship, I created engaging websites
+                                                Throughout my UI development internship, I created interactive websites
                                                 with responsive designs. By utilizing HTML, CSS, and JavaScript, I
                                                 focused on clean layouts and easy navigation, greatly improving user
                                                 satisfaction and interaction. This experience has significantly enhanced
@@ -183,12 +183,11 @@
                                                 </div>
                                             </div>
                                             <div class="text">
-                                                During my UI development internship, I leveraged HTML, CSS, and
-                                                JavaScript to emphasize clear layouts and intuitive navigation, which
-                                                significantly enhanced user experience and involvement. This role
-                                                deepened my appreciation for responsive design and its impact on user
-                                                satisfaction. I also gained valuable insights into best practices for
-                                                creating accessible web applications.
+                                                During my UI development internship, I developed modern websites with
+                                                responsive designs. By utilizing HTML, CSS, and JavaScript, I focused on
+                                                clean layouts and easy navigation, greatly improving user satisfaction
+                                                and interaction. This experience has significantly enhanced my
+                                                understanding of user-centered design principles.
                                             </div>
 
                                         </div>
@@ -206,10 +205,12 @@
                                                     <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">Throughout my UI development internship, I developed
-                                                dynamic websites with adaptive designs. Leveraging HTML, CSS, and
-                                                JavaScript, I emphasized streamlined layouts and intuitive navigation,
-                                                significantly enhancing user engagement and experience.</div>
+                                            <div class="text">Throughout my UI development internship, I created
+                                                user-friendly websites with responsive designs. By utilizing HTML, CSS,
+                                                and JavaScript, I focused on clean layouts and easy navigation, greatly
+                                                improving user satisfaction and interaction. This experience has
+                                                significantly enhanced my understanding of user-centered design
+                                                principles.</div>
                                         </div>
                                     </div>
 
@@ -225,10 +226,12 @@
                                                     <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">During my UI development internship, I crafted engaging
-                                                web interfaces with flexible designs. Using HTML, CSS, and JavaScript, I
-                                                prioritized seamless layouts and user-friendly navigation, which greatly
-                                                improved the overall user interaction.</div>
+                                            <div class="text">In my UI development internship, I built professional
+                                                websites with responsive designs. By utilizing HTML, CSS, and
+                                                JavaScript, I focused on clean layouts and easy navigation, greatly
+                                                improving user satisfaction and interaction. This experience has
+                                                significantly enhanced my understanding and cleairity of project and of user-centered design
+                                                principles.</div>
                                         </div>
                                     </div>
 
@@ -246,10 +249,12 @@
                                                     <div class="location">Pune</div>
                                                 </div>
                                             </div>
-                                            <div class="text">In my UI development internship, I created innovative web
-                                                solutions with versatile designs. By applying HTML, CSS, and JavaScript,
-                                                I focused on effective layouts and enhanced navigation, ultimately
-                                                elevating the user experience.</div>
+                                            <div class="text">Throughout my UI development internship, I designed
+                                                visually appealing websites with responsive designs. By utilizing HTML,
+                                                CSS, and JavaScript, I focused on clean layouts and easy navigation,
+                                                greatly improving user satisfaction and interaction. This experience has
+                                                significantly enhanced my understanding of user-centered design
+                                                principles.</div>
                                         </div>
                                     </div>
                                 </div>
