--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link href="plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css">
     <!-- REVOLUTION NAVIGATION STYLES -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Roboto:400,600|Material+Icons'>
     <link href="css/responsive.css" rel="stylesheet">
 
