--- a/about.html
+++ b/about.html
@@ -312,22 +312,21 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!--Column-->
-                                    <div class="column col-md-6 col-sm-6 col-xs-12">
-                                        <div class="partner-block">
-                                            <div class="inner-box">
-                                                <div class="client-img">
-                                                    <img src="images/p_logo4.png"
-                                                        alt="ACC Express - Trusted Provider of Products and Services" />
-                                                </div>
-                                                <div class="text">ACC provides products and services with the aim of
-                                                    building trust and improving the lives of consumers, small
-                                                    businesses, enterprises.</div>
-                                                <a class="read-more" href="http://accexpress.in/"><span
-                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
+                                  <!--Column-->
+                                  <div class="column col-md-6 col-sm-6 col-xs-12">
+                                    <div class="partner-block">
+                                        <div class="inner-box">
+                                            <div class="client-img">
+                                                <img src="images/logo/naturevalleylogo.png"
+                                                    alt="SSS7 - Leading Sports Technology Company" />
                                             </div>
+                                            <div class="text">SS7 Sports is a sports technology company with brands
+                                                such as MyBatting11 in its portfolio.</div>
+                                            <a class="read-more" href="https://ss7sports.com/"><span
+                                                    class="icon flaticon-right-arrow-1"></span> Visit Website</a>
                                         </div>
                                     </div>
+                                </div>
                                 </div>
                             </div>
 
@@ -348,21 +347,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!--Column-->
-                                    <div class="column col-md-6 col-sm-6 col-xs-12">
-                                        <div class="partner-block">
-                                            <div class="inner-box">
-                                                <div class="client-img">
-                                                    <img src="images/logo/esparktechlogo.png"
-                                                        alt="Espark Tech - Innovative Product Architecture from Pune" />
-                                                </div>
-                                                <div class="text">We are a passionate Product Architecture from Pune.
-                                                </div>
-                                                <a class="read-more" href="http://esparktech.com/"><span
-                                                        class="icon flaticon-right-arrow-1"></span> Visit Website</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                  
                                 </div>
                             </div>
 
