--- a/data_science_jobopportunities.html
+++ b/data_science_jobopportunities.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Data Science|Technoartz | Data Science Consulting|Advanced Data Science| IT industry|Data Science IT Solutions| Data Science Page </title>
+    <title>Data Science|Technoartz | Data Science Consulting|Advanced Data Science| IT Industry|Data Science IT Solutions| Data Science Page </title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -24,7 +24,6 @@
 <body>
 
     <div class="page-wrapper">
-
         <!-- Preloader -->
         <!-- <div class="preloader"></div> -->
 
