--- a/digital_marketingService.html
+++ b/digital_marketingService.html
@@ -239,8 +239,7 @@
                             </div>
                             <div class="lower-content">
                             	<div class="text" style="text-align: justify;">
-                                	<p>To Growth Long term with Powerful solutions.<br><br>
-                                        We have <b>Digital Marketing Services</b><br><br>
+                                        We have <b>Digital Marketing Services</b><br>
                                         Technoartz is the fastest-growing Digital marketing service company based in Pune to serving clients worldwide. We are here to make successful digital strategies for clients and increase their revenue by leads, conversations, and qualified traffic
                                          </p>
                                       
@@ -450,7 +449,7 @@
                                         </div>
                                         <div class="form-group">
                                             <select class="custom-select-box">
-                                                <option>Select Course</option>
+                                                <option>Select Service</option>
                                                 <option>Website Development</option>
                                                 <option>Digital Marketing</option>
                                                 <option>Graphics Designing</option>
