--- a/fullstack_developmentService.html
+++ b/fullstack_developmentService.html
@@ -711,7 +711,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <select class="custom-select-box">
-                                                        <option>Select Course</option>
+                                                        <option>Select Service</option>
                                                         <option>Website Development</option>
                                                         <option>Digital Marketing</option>
                                                         <option>Graphics Designing</option>
