--- a/graphics_designingService.html
+++ b/graphics_designingService.html
@@ -125,7 +125,7 @@
                                                 <div class="location">Hadapsar</div>
                                             </div>
                                         </div>
-										<div class="text">
+										<div class="text-justify">
                                             "Technoartz provides top-notch full stack development with strong technical expertise and user-friendly solutions. Their team is responsive, ensures timely delivery, and maintains high-quality standards. A smooth and rewarding experience. Highly recommended!"
                                             
                                         </div>
@@ -409,10 +409,9 @@
                                         </div>
                                         <div class="form-group">
                                             <select class="custom-select-box">
-                                                <option>Select Course</option>
-                                                <option>Website Development</option>
+                                                <option>Select Service</option>
+                                                <option>Web Development</option>
                                                 <option>Digital Marketing</option>
-                                                <option>App Development</option>
                                                 <option>Graphics Designing</option>
                                             </select>
                                         </div>
